[Instrumentor] Fix tests naming convention - use given_when_then